--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,24 @@
   body {
     @apply bg-gradient-to-b from-zinc-900 to-zinc-700;
   }
+
+  *::-webkit-scrollbar {
+    width: 0.25rem;
+  }
+
+  *::-webkit-scrollbar-track {
+    @apply bg-zinc-800;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    @apply bg-zinc-700;
+  }
+
+  *::-webkit-scrollbar-thumb:hover {
+    @apply bg-zinc-600;
+  }
+
+  *::-webkit-scrollbar-thumb:active {
+    @apply bg-zinc-500;
+  }
 }
